service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goso-srvc
  labels:
    app: goso
spec:
  selector:
    app: goso
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
