ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goso-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  tls:
    - hosts:
        - goso.muan.me
      secretName: goso-tls
  rules:
    - host: goso.muan.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goso-srvc
                port:
                  number: 80
